calendar css changes and overlap bug fixed

--- a/site/calendar.css
+++ b/site/calendar.css
@@ -1,5 +1,13 @@
 #calHead {
-  padding:3em;
+  width: 80%;
+  margin: auto;
+  margin-top: 40px;
+  padding-top: 3em;
+  padding-bottom: 3em;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  font-family: "Nixie One",Arial,sans-serif;
+  font-weight: normal;
 }
 
 #calHead > * {
@@ -7,8 +15,8 @@
 }
 
 #weekHead {
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 2vw;
+  color: grey;
 }
 
 #Prev {
@@ -22,33 +30,60 @@
 .weekBtn {
   padding: 5px;
   border: 1px solid transparent;
-  border-radius:4px;
+  border-radius:25px;
   text-align: center;
   width:100px;
-  color:#fff;
-  font-size: 15px;
-  background-color: rgb(0,0,0);
+  color:grey;
+  font-size: 2vw;
+  background-color: transparent;
   cursor: pointer;
 }
 
-/*No need to change*/
-th {
-  color:white;
-  padding-bottom: 20px;
-  height: 0vh;
-  background-color: #00ccff;
+.weekBtn:hover {
+   color: black;
+   transform: scale(1.5,1.5);
+   transition: .3s all;
 }
+
+body {
+  background-color: white;/*#f1f1f1;*/
+}
+
+th {
+  color:grey;
+  padding: 10px 10px 10px 20px;
+  height: 0vh;
+  font-family: "Nixie One",Arial,sans-serif;
+  font-weight: normal;
+  font-size: 1.2vw;
+}
+
+a {
+  color: #3e0be5;
+}
+
+.timeLine > li {
+  list-style-type:none;
+}
+
 
 /*Calendar table*/
 #calendar{
-	/*background-color:#ccc;*/
   table-layout: fixed;
-  width: 90%;
+  width: 80%;
   margin: auto;
   height: 100vh;                      /*adjusts the calendar relative to the users viewport*/
-  background-color: rgb(0, 0, 0);
   font-size: 1vw;                     /*adjusts the calendar texts relative to the users viewport*/
   text-align: center;
+  margin-bottom: 40px;
+  border: 1px grey frame;
+  border-radius: 25px;
+  text-align: center;
+  background-color: #eee; /*#faf4ef;/*#e4e4e4;/*#f1f1f1;*/
+  box-shadow: 3px 3px #888888;
+  padding-right: 15px;
+  padding-left: 15px;
+  font-family: "Nixie One",Arial,sans-serif;
 }
 
 .day{
@@ -58,48 +93,37 @@ th {
   flex-direction: column;
   width: 100%;
   height: 100%;                      /*expand out to the calendar's fullest*/
+  font-weight: lighter;
   color: black;
-  border: 1px solid transparent
+  height: 100vh; 
 }
 
-/*.event:hover
-{
-   color: white;
-   min-width: 400px;
-   min-height: 100px;
-   overflow: visible;
-   z-index:4;
-<<<<<<< HEAD
-   /*width: 100% !important;
-=======
->>>>>>> 7e07bf0d107e99e6b5ef2c3afa79cdc9a113922c
-   transform:scale(2,2);
-   transition: .1s all;
-   font-size: 0.5em;
-
+.event:hover {
+  color: rgba(0, 0, 0, 1);
+  box-shadow: 5px 5px #888888;
+  transform: scale(1.1,1.1);
+  /*font-size: 0.4em;*/
+  transition: .2s all;
+  z-index: 4;
 }
-
-.event:hover > .edit {
-  height:50%;
-  width:50%;
-}*/
 
 .event {
-	background-color: #067FE3;
   word-break: break-word;
-  outline: 2px groove black;
   overflow: hidden;
-  font-family: sans-serif;
   z-index: 0;
   cursor: pointer;
-  float:left;
-  /*white-space: nowrap;*/
+  float: left;
+  opacity: 0.6;
+  background-color: red;
+  border-radius: 5px;
+  font-family: "Nixie One",Arial,sans-serif;
+  /*outline: 2px groove black;*/
   }
 
 .SUMMARY{
-  font-weight: bold;
+  font-weight:bold;
 }
 
 .KTH {
-  background-color: rgb(255,86,2)/*#fa5050*/;
+    background-color: #2476D2;
 }
